PDF Hoja de vida

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h4>Desarrollador Web Full Stack</h4>
                     <hr>
                     <p>Hola, soy Jeyson. Tengo 3 años de expieriencia en el desarrollo de aplicaciones. He trabajado en proyectos para optimizar el rendimiento de sitios web y mejorar la experiencia de usuario.</p>
-                    <a type="button" class="btn btn-info btnDownload" href="assets/pdf/HVJeysonVega.pdf" download="Hoja de vida - Jeyson Vega">Descargar perfil</a>
+                    <a type="button" class="btn btn-info btnDownload" href="assets/pdf/HVJeysonVega.pdf" download="Perfil">Descargar perfil</a>
                 </div>
                 <div class="gesture d-lg-none ani-gesture">
                     <img src="/images/gesture.svg" class="img-responsive">
