Se incluye service worker

--- a/index.html
+++ b/index.html
@@ -515,6 +515,15 @@
 
     <script src="js/scripts.js"></script>
 
+    <!-- Service worker -->
+    <script src="service-worker.js"></script>
 </body>
 
 </html>
+
+
+<!-- 
+Recomendaciones:
+- Poner foto y datos de acerca de en home.
+- En mobile no usar menú de hamburguesa sino botones.
+- Trabajos: En mobile, mostrar solo el logo de las empresas. -->
