--- a/offline/offline.html
+++ b/offline/offline.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeyson Vega - Game</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #000000;
+        }
+    </style>
 </head>
 
 <body>
-    Oops! no hay internet
+    <script src="/offline/src/phaser.min.js"></script>
+    <script src="/offline/src/GamePlay.js"></script>
 </body>
 
 </html>
